[package]
name = "fly-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable = "0.10"


[[bin]]
name = "fly-rust"
path = "main.rs"
